force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/Sansan_CI__BizCard_DispField__c.object-meta.xml
<CustomObject>
    <label>名刺表示設定</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>DispFieldNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>