force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__DispField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__DispField__c</fullName>
    <label>表示項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>