force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__DispObject__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__DispObject__c</fullName>
    <label>表示オブジェクト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>