force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__DispPage__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__DispPage__c</fullName>
    <label>表示画面</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>