force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__IsImmutableField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsImmutableField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変更不可項目</label>
    <type>Checkbox</type>
</CustomField>