force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__No__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__No__c</fullName>
    <label>No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>