force-app/main/default/objects/Sansan_CI__BizCard_DispField__c/fields/Sansan_CI__SearchObject__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__SearchObject__c</fullName>
    <label>検索オブジェト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>